@@ -34,4 +34,4 @@ AM_PROG_LIBTOOL
 AC_SUBST(SHLIB_VERSION_ARG)
 AC_SUBST(SHARED_VERSION_INFO)
 
-AC_OUTPUT(Makefile doc/Makefile man/Makefile src/Makefile libgig.spec libgig.pc Doxyfile)
+AC_OUTPUT(Makefile doc/Makefile man/Makefile src/Makefile libgig.spec gig.pc Doxyfile)
