@@ -2,7 +2,7 @@ debian/tmp/usr/include/* usr/include
 debian/tmp/usr/lib/lib*.a usr/lib
 debian/tmp/usr/lib/lib*.la usr/lib
 debian/tmp/usr/lib/lib*.so usr/lib
-debian/tmp/usr/lib/pkgconfig/libgig.pc usr/lib/pkgconfig
+debian/tmp/usr/lib/pkgconfig/gig.pc usr/lib/pkgconfig
 debian/tmp/usr/share/aclocal/* usr/share/aclocal
 doc/*.html usr/share/doc/libgig-dev/html
 doc/*.jpg usr/share/doc/libgig-dev/html
